tests/sema/fail/v8_fail_println_i64.ep
# COMPILE_FAIL: println expected str, got i64

fun main(): i64 {
    println(1)
    ret 0
}
